--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,14 @@
-$Id: history.txt,v 1.263 2005/09/21 18:01:37 jrandom Exp $
+$Id: history.txt,v 1.264 2005/09/25 04:29:01 jrandom Exp $
+
+2005-09-25  jrandom
+    * Allow reseeding on the console if the netDb knows less than 30 peers,
+      rather than less than 10 (without internet connectivity, we keep the 
+      last 15 router references)
+    * Reenable the x-i2p-gzip HTTP processing by default, flushing the stream
+      more aggressively.
+    * Show the status that used to be called "ERR-Reject" as "OK (NAT)"
+    * Reduced the default maximum number of streaming lib resends of a packet
+      (10 retransmits is a bit much with a reasonable RTO)
 
 2005-09-25  Complication
     * Better i2paddresshelper handling in the I2PTunnel httpclient, plus a new
