2005-09-27  jrandom     * Properly suggest filenames for attachments in Syndie (thanks all!)     * Fixed the Syndie authorization scheme for single user vs. multiuser
Monotone-Parent: dcad8bfbe50ced0eabeb7ca57ad34cf8ee3bf5c8
Monotone-Revision: a9624c037f9d44ccc9cfde4ce780672f7a6745aa

Monotone-Author: jrandom
Monotone-Date: 2005-09-27T22:42:49
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.266 2005/09/26 18:45:53 jrandom Exp $
+$Id: history.txt,v 1.267 2005/09/27 02:17:41 jrandom Exp $
+
+2005-09-27  jrandom
+    * Properly suggest filenames for attachments in Syndie (thanks all!)
+    * Fixed the Syndie authorization scheme for single user vs. multiuser
 
 2005-09-27  jrandom
     * I2PTunnel bugfix (thanks Complication!)
