2005-09-28  jrandom     * Fix for at least some (all?) of the wrong stream errors in the streaming       lib
Monotone-Parent: a9624c037f9d44ccc9cfde4ce780672f7a6745aa
Monotone-Revision: 7b9a891719d7f6a2a54e82002c949ca257a8cc74

Monotone-Author: jrandom
Monotone-Date: 2005-09-28T09:17:54
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.267 2005/09/27 02:17:41 jrandom Exp $
+$Id: history.txt,v 1.268 2005/09/27 17:42:49 jrandom Exp $
+
+2005-09-28  jrandom
+    * Fix for at least some (all?) of the wrong stream errors in the streaming
+      lib
 
 2005-09-27  jrandom
     * Properly suggest filenames for attachments in Syndie (thanks all!)
