* Export petnames from syndie to the router's petname db instead of userhosts.txt.
Monotone-Parent: cb12b9f428c262341f0cb745cbb8f48b654751f8
Monotone-Revision: 2824e89de2d0b005a153908307ff10d62ed2f86a

Monotone-Author: ragnarok
Monotone-Date: 2005-09-30T07:32:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,9 @@
 $Id: history.txt,v 1.270 2005/09/29 14:19:23 jrandom Exp $
 
+2005-09-29  ragnarok
+	* Export petnames from syndie to the router's petname db instead of 
+	  userhosts.txt.
+
 2005-09-29  jrandom
     * Support noreseed.i2p in addition to .i2pnoreseed for disabling automatic
       reseeding - useful on OSes that make it hard to create dot files.  
