* Add a notModified flag to Eepget and Eepget status listeners.
Monotone-Parent: b7cd4b7c0d7751ff2beefadaa57c8cacedfa9121
Monotone-Revision: b7d8f663d21626583e6100d7cc8a0dba52a8df7c

Monotone-Author: ragnarok
Monotone-Date: 2005-10-01T00:57:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.274 2005/09/30 15:29:19 jrandom Exp $
+$Id: history.txt,v 1.275 2005/09/30 18:12:57 jrandom Exp $
+
+2005-09-30  ragnarok
+    * Implemented conditional get for syndie remote archive imports. 
 
 2005-09-30  jrandom
     * Killed three more streaming lib bugs, one of which caused excess packets
