* Changed default update delay to twelve hours, and enforced a minimum       delay of one hour.
Monotone-Parent: 6dbfb32c4268af713c2d1e4177417dc808c7540e
Monotone-Revision: b637cc5a066db264e83c965feda0306a76878c5b

Monotone-Author: ragnarok
Monotone-Date: 2005-10-04T00:27:34
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.277 2005/10/01 14:20:10 jrandom Exp $
+$Id: history.txt,v 1.278 2005/10/03 13:55:10 ragnarok Exp $
+
+2005-10-03  rangarok
+    * Changed default update delay to twelve hours, and enforced a minimum 
+      delay of one hour.
 
 2005-10-03  ragnarok
     * Implemented a Syndie auto-updater.  It will automatically pull new posts
