2005-10-03  jrandom     * Properly reject unroutable IP addresses *cough*
Monotone-Parent: b637cc5a066db264e83c965feda0306a76878c5b
Monotone-Revision: 57208b9ebe681584a2221661ecd4fa2517685cae

Monotone-Author: jrandom
Monotone-Date: 2005-10-04T02:05:52
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.278 2005/10/03 13:55:10 ragnarok Exp $
+$Id: history.txt,v 1.279 2005/10/03 19:27:35 ragnarok Exp $
+
+2005-10-03  jrandom
+    * Properly reject unroutable IP addresses *cough*
 
 2005-10-03  rangarok
     * Changed default update delay to twelve hours, and enforced a minimum 
