2005-10-04  jrandom     * Further reduction in unnecessary streaming packets.
Monotone-Parent: 57208b9ebe681584a2221661ecd4fa2517685cae
Monotone-Revision: 9ca8a9c2d8d8a9a0954a83a3c82f66a36ae4741d

Monotone-Author: jrandom
Monotone-Date: 2005-10-04T07:36:25
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.279 2005/10/03 19:27:35 ragnarok Exp $
+$Id: history.txt,v 1.280 2005/10/03 21:05:52 jrandom Exp $
+
+2005-10-04  jrandom
+    * Further reduction in unnecessary streaming packets.
 
 2005-10-03  jrandom
     * Properly reject unroutable IP addresses *cough*
