2005-10-04  jrandom     * Syndie patch for single user remote archives (thanks nickless_head!)     * Handle an invalid netDb store (thanks Complication!)
Monotone-Parent: 7e50f5a76266ed7c57e31d9384d445c7c497d149
Monotone-Revision: 630d7486613e2ecd79ad43761ca9537112659831

Monotone-Author: jrandom
Monotone-Date: 2005-10-04T23:43:05
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.280 2005/10/03 21:05:52 jrandom Exp $
+$Id: history.txt,v 1.281 2005/10/04 02:36:25 jrandom Exp $
+
+2005-10-04  jrandom
+    * Syndie patch for single user remote archives (thanks nickless_head!)
+    * Handle an invalid netDb store (thanks Complication!)
 
 2005-10-04  jrandom
     * Further reduction in unnecessary streaming packets.
