--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.282 2005/10/04 18:43:05 jrandom Exp $
+$Id: history.txt,v 1.283 2005/10/05 18:24:33 jrandom Exp $
+
+2005-10-07  jrandom
+    * Allow the I2PTunnelHTTPServer to send back the first few packets of an
+      HTTP response quicker, and initialize the streaming lib's cwin more 
+      carefully.
+    * Added a small web UI to the new Syndie scheduled updater.  If you log in
+      as a user authorized to use the remote archive funtionality, you can
+      request remote archives in your address book to be automatically pulled
+      down by checking the "scheduled?" checkbox.
 
 2005-10-05  jrandom
     * Allow the first few packets in the stream to fill in their IDs during
