2005-10-08  jrandom     * Use the OS clock for stat timing, since it doesn't jump around (though       still use the NTP'ed clock for display)     * Added new DH stats
Monotone-Parent: 5def56f7867141e4d0acca86b34618ca20b548c2
Monotone-Revision: 174113c82559ecba8de77b0904e764fc2e9c9000

Monotone-Author: jrandom
Monotone-Date: 2005-10-08T22:05:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.284 2005/10/07 05:23:01 jrandom Exp $
+$Id: history.txt,v 1.285 2005/10/07 15:19:04 jrandom Exp $
+
+2005-10-08  jrandom
+    * Use the OS clock for stat timing, since it doesn't jump around (though
+      still use the NTP'ed clock for display)
+    * Added new DH stats
 
 * 2005-10-07  0.6.1.2 released
 
