--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.286 2005/10/08 17:05:49 jrandom Exp $
+$Id: history.txt,v 1.287 2005/10/09 00:46:57 jrandom Exp $
+
+2005-10-09  jrandom
+    * Syndie CLI cleanup for simpler CLI posting.  Usage shown with
+      java -jar lib/syndie.jar
+    * Beginnings of the Syndie logging cleanup
+    * Delete corrupt Syndie posts
 
 2005-10-09  jrandom
     * Now that the streaming lib works reasonably, set the default inactivity 
