2005-10-11  jrandom     * Piggyback the SSU explicit ACKs with data packets (partial ACKs aren't       yet piggybacked).  This is backwards compatible.     * SML parser cleanup in Syndie
Monotone-Parent: 54f3ed63f02e0cf685157552ec2e3c2935a1c374
Monotone-Revision: 306beb5bfaa149008cd75d32c0ed62673fe3f2d1

Monotone-Author: jrandom
Monotone-Date: 2005-10-11T07:07:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.288 2005/10/09 06:35:15 jrandom Exp $
+$Id: history.txt,v 1.289 2005/10/10 17:58:19 jrandom Exp $
+
+2005-10-11  jrandom
+    * Piggyback the SSU explicit ACKs with data packets (partial ACKs aren't
+      yet piggybacked).  This is backwards compatible.
+    * SML parser cleanup in Syndie
 
 2005-10-10  dust
     * Implemented a new I2PTunnelIRCClient which locally filters inbound and
