--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.291 2005/10/11 16:05:15 jrandom Exp $
+$Id: history.txt,v 1.292 2005/10/12 22:54:54 jrandom Exp $
+
+2005-10-13  jrandom
+    * SSU retransmission choke bugfix (== != !=)
+    * Include initial transmissions in the retransmission choke, so that
+      if we are already retransmitting a message, we won't send anything
+      to that peer other than that message (or ACKs, if necessary)
 
 2005-10-12  jrandom
     * Choke SSU retransmissions to a peer while there is already a
