2005-10-13  dust     * Bundled dust's Sucker for pulling RSS/Atom content into SML, which can       then be injected into Syndie with the Syndie CLI.     * Bundled ROME and JDOM (BSD and Apache licensed, respectively) for       RSS/Atom parsing. 2005-10-13  jrandom     * SSU retransmission choke bugfix (== != !=)     * Include initial transmissions in the retransmission choke, so that       if we are already retransmitting a message, we won't send anything       to that peer other than that message (or ACKs, if necessary)
Monotone-Parent: 26783cec83edc5705021b28c8c2057f48c164f80
Monotone-Revision: 2f0fbcec7d260e2714a3fe71218be0740034a26a

Monotone-Author: jrandom
Monotone-Date: 2005-10-14T02:15:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.292 2005/10/12 22:54:54 jrandom Exp $
+$Id: history.txt,v 1.293 2005/10/13 04:18:37 jrandom Exp $
+
+2005-10-13  dust
+    * Bundled dust's Sucker for pulling RSS/Atom content into SML, which can
+      then be injected into Syndie with the Syndie CLI.
+    * Bundled ROME and JDOM (BSD and Apache licensed, respectively) for
+      RSS/Atom parsing.
 
 2005-10-13  jrandom
     * SSU retransmission choke bugfix (== != !=)
