* 2005-10-14  0.6.1.3 released 2005-10-14  jrandom     * Added a key explaining peers.jsp a bit (thanks tethra!)
Monotone-Parent: 2f0fbcec7d260e2714a3fe71218be0740034a26a
Monotone-Revision: 4b21921e50f9811dc75b7091ab7f7ac33ea2c109

Monotone-Author: jrandom
Monotone-Date: 2005-10-14T13:48:04
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_1_3

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.293 2005/10/13 04:18:37 jrandom Exp $
+$Id: history.txt,v 1.294 2005/10/13 21:15:40 jrandom Exp $
+
+* 2005-10-14  0.6.1.3 released
+
+2005-10-14  jrandom
+    * Added a key explaining peers.jsp a bit (thanks tethra!)
 
 2005-10-13  dust
     * Bundled dust's Sucker for pulling RSS/Atom content into SML, which can
