2005-10-14  jrandom     * More explicit filter for linux/PPC building (thanks anon!)
Monotone-Parent: 4b21921e50f9811dc75b7091ab7f7ac33ea2c109
Monotone-Revision: ce02f0afb97e5ecec927cbbc7dab78a8c9a9288c

Monotone-Author: jrandom
Monotone-Date: 2005-10-14T15:05:26
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.294 2005/10/13 21:15:40 jrandom Exp $
+$Id: history.txt,v 1.295 2005/10/14 08:48:05 jrandom Exp $
+
+2005-10-14  jrandom
+    * More explicit filter for linux/PPC building (thanks anon!)
 
 * 2005-10-14  0.6.1.3 released
 
