--- a/history.txt
+++ b/history.txt
@@ -1,7 +1,9 @@
-$Id: history.txt,v 1.295 2005/10/14 08:48:05 jrandom Exp $
+$Id: history.txt,v 1.296 2005/10/14 10:05:26 jrandom Exp $
 
 2005-10-14  jrandom
     * More explicit filter for linux/PPC building (thanks anon!)
+    * Fixed Syndie's Sucker to not explicitly reference something only found
+      in sun's JVM (thanks cervantes!)
 
 * 2005-10-14  0.6.1.3 released
 
