2005-10-17  dust     * Exchange the remaining URL with EepGet in Sucker.     * Allow /TOPIC irc command.
Monotone-Parent: 75f0f97a5a0c032174547245d0f800d0062af32a
Monotone-Revision: 8ed3f1fa069972b8a1828e78abc44b9f7343521b

Monotone-Author: dust
Monotone-Date: 2005-10-18T03:14:01
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.298 2005/10/14 11:26:31 jrandom Exp $
+$Id: history.txt,v 1.299 2005/10/17 19:39:46 jrandom Exp $
+
+2005-10-17  dust
+    * Exchange the remaining URL with EepGet in Sucker.
+    * Allow /TOPIC irc command.
 
 2005-10-17  jrandom
     * Allow an env prop to configure whether we want to use the backwards
