2005-10-19  jrandom     * Ported the snark bittorrent client to I2P such that it is compatible       with i2p-bt and azneti2p.  For usage information, grab an update and run       "java -jar lib/i2psnark.jar".  It isn't currently multitorrent capable,       but adding in support would be fairly easy (see PeerAcceptor.java:49)     * Don't allow leaseSets expiring too far in the future (thanks postman)
Monotone-Parent: 1c1ba7eda0384d8bea37cf6e324ffcdf7eebd528
Monotone-Revision: 6791f30210bbf01a50baf37342a1fc75e333a0ac

Monotone-Author: jrandom
Monotone-Date: 2005-10-19T22:38:45
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.300 2005/10/17 22:14:01 dust Exp $
+$Id: history.txt,v 1.301 2005/10/19 00:15:15 jrandom Exp $
+
+2005-10-19  jrandom
+    * Ported the snark bittorrent client to I2P such that it is compatible
+      with i2p-bt and azneti2p.  For usage information, grab an update and run
+      "java -jar lib/i2psnark.jar".  It isn't currently multitorrent capable,
+      but adding in support would be fairly easy (see PeerAcceptor.java:49)
+    * Don't allow leaseSets expiring too far in the future (thanks postman)
 
 2005-10-19  jrandom
     * Bugfix for the auto-update code to handle different usage patterns
