2005-10-20  jrandom     * Workaround a bug in GCJ's Calendar implementation     * Propery throw an exception in the streaming lib if we try to write to a       closed stream.  This will hopefully help clear some I2Phex bugs (thanks       GregorK!)
Monotone-Parent: 5c38c056cd4b692dad9e5ebacef3f508bc3a8e1a
Monotone-Revision: 274ac6a1304d7bb677d048356c3fb96c6720cc69

Monotone-Author: jrandom
Monotone-Date: 2005-10-20T08:56:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.301 2005/10/19 00:15:15 jrandom Exp $
+$Id: history.txt,v 1.302 2005/10/19 17:38:46 jrandom Exp $
+
+2005-10-20  jrandom
+    * Workaround a bug in GCJ's Calendar implementation
+    * Propery throw an exception in the streaming lib if we try to write to a
+      closed stream.  This will hopefully help clear some I2Phex bugs (thanks
+      GregorK!)
 
 2005-10-19  jrandom
     * Ported the snark bittorrent client to I2P such that it is compatible
