2005-10-20  dust     * Fix bug in ircclient that prevented it to use its own dest (i.e. was       always shared. (thx for info Ragnarok)     * Fix crash in Sucker with some bad html.
Monotone-Parent: 274ac6a1304d7bb677d048356c3fb96c6720cc69
Monotone-Revision: 1e61eb9e7bf00409cc18d2ee761e6a07e24f9665

Monotone-Author: dust
Monotone-Date: 2005-10-20T19:42:13
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.302 2005/10/19 17:38:46 jrandom Exp $
+$Id: history.txt,v 1.303 2005/10/20 03:56:40 jrandom Exp $
+
+2005-10-20  dust
+    * Fix bug in ircclient that prevented it to use its own dest (i.e. was
+      always shared. (thx for info Ragnarok)
+    * Fix crash in Sucker with some bad html.
 
 2005-10-20  jrandom
     * Workaround a bug in GCJ's Calendar implementation
